--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html>
   <head>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Crunchy Tunes</title>
+    <title>SFUFF</title>
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
